--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "games-wabot",
+  "name": "facabotz",
   "version": "0.9.8",
-  "description": "Customizable WhatsApp Bot",
+  "description": "facabotzz",
   "depecrated": false,
   "main": "index.js",
   "directories": {
